MDEV-22640, MDEV-22449, MDEV-21528  JSON_ARRAYAGG crashes with NULL values.

We have to include NULL in the result which the GOUP_CONCAT doesn't
always do. Also converting should be done into another String instance
as these can be same.