sql/item_jsonfunc.h
@@ -537,7 +537,15 @@ public:
 
 class Item_func_json_arrayagg : public Item_func_group_concat
 {
+protected:
+  /*
+    Overrides Item_func_group_concat::skip_nulls()
+    NULL-s should be added to the result as JSON null value.
+  */
+  virtual bool skip_nulls() const { return false; }
+
 public:
+  String m_tmp_json; /* Used in convert_to_json. */
   Item_func_json_arrayagg(THD *thd, Name_resolution_context *context_arg,
                           bool is_distinct, List<Item> *is_select,
                           const SQL_I_List<ORDER> &is_order, String *is_separator,
@@ -552,14 +560,9 @@ public:
   const char *func_name() const { return "json_arrayagg("; }
   enum Sumfunctype sum_func() const {return JSON_ARRAYAGG_FUNC;}
 
-  String* convert_to_json(Item *item, String *str);
+  String* convert_to_json(Item *item);
   String* val_str(String *str);
 
-  /* Overrides Item_func_group_concat::add() */
-  bool add()
-  {
-    return Item_func_group_concat::add(false);
-  }
   Item *get_copy(THD *thd)
   { return get_item_copy<Item_func_json_arrayagg>(thd, this); }
 };
